--- a/Baby-shop/css/style.css
+++ b/Baby-shop/css/style.css
@@ -815,6 +815,166 @@ a:hover {
 }
 
 
+@media(min-width: 1024px) {
+	.main-navigation__category-list {
+		height: auto;
+		position: absolute;
+		overflow: visible;
+		background: #2f2f34;
+		z-index: 1;
+	}
+
+	.main-navigation__subcategory-item {
+		width: 300px;
+		margin-left: 70px;
+	}
+
+	.main-navigation__subcategory-link {
+		display: block;
+		text-align: center;
+		font-size: 13px;
+		font-weight: 500;
+		opacity: 0;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
+		transition: 1s;
+	}
+
+	.main-navigation__subcategory-item:first-child {
+		margin-top: 20px;
+	}
+
+	.main-navigation__subcategory-item:nth-last-child(2) {
+		margin-bottom: 20px;
+	}
+
+	.main-navigation__category-item {
+		position: static;
+		display: inline-block;
+		padding: 16px 36px;
+		cursor: pointer;
+		margin: 0 -4px;
+		-webkit-box-sizing: border-box;
+		        box-sizing: border-box;
+	}
+
+	.main-navigation__subcategory-list {
+		position: absolute;
+		top: 49px;
+		left: 50%;
+		width: 800px;
+		-webkit-transform: translateX(-400px);
+		    -ms-transform: translateX(-400px);
+		        transform: translateX(-400px);
+		text-align: left;
+		-webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+		        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
+	}
+
+	.main-navigation__category-icon {
+		top: -2px;
+	}
+
+	.main-navigation__category-button {
+		-webkit-transition: 0.1s;
+		-o-transition: 0.1s;
+		transition: 0.1s;
+	}
+
+	.main-navigation__category-item:hover .main-navigation__subcategory-list {
+		min-height: 364px;
+		overflow: visible;
+	}
+
+
+	.main-navigation__category-item:hover .main-navigation__category-icon::after,
+	.main-navigation__category-item:hover .main-navigation__category-icon::before {
+		background: #e23709;
+	}
+	
+	.main-navigation__category-item:hover .main-navigation__category-link {
+		color: #e23709;
+	}
+
+	.main-navigation__category-item:hover .main-navigation__category-button {
+		-webkit-transform: rotate(180deg);
+		    -ms-transform: rotate(180deg);
+		        transform: rotate(180deg);
+	}
+
+	.main-navigation__category-item:hover .main-navigation__subcategory-link {
+		opacity: 1;
+	}
+
+	.main-navigation__subcategory-list:hover .main-navigation__subcategory-link {
+		-webkit-transition: 0s;
+		-o-transition: 0s;
+		transition: 0s;
+	}
+
+	.main-navigation__subcategory-item:hover .main-navigation__subcategory-link {
+		color: red;
+	}
+
+
+
+
+
+
+	.main-navigation__category-link {
+		font-size: 13px;
+		font-weight: 500;
+		padding: 0;
+	}
+
+	.main-navigation__category-button {
+		left: 50px;
+	}
+
+	.main-navigation__category-icon::after {
+		top: 0px;
+		left: -7px;
+		width: 10px;
+		height: 2px;
+		border-radius: 3px;
+	}
+
+	.main-navigation__category-icon::before {
+		top: 0px;
+		left: -1px;
+		width: 10px;
+		height:2px;
+		border-radius: 3px;
+	}
+
+	.main-navigation__category-accent {
+		display: block;
+		position: absolute;
+		right: 0;
+		top: 0;
+		width: 364px;
+		height: 364px;
+		overflow: hidden;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .main-content {
 	position: relative;
@@ -951,7 +1111,7 @@ a:hover {
 }
 
 .filter-button {
-	display: block;
+	display: none;
 	position: relative;
 	width: 40px;
 	height: 40px;
@@ -978,6 +1138,38 @@ a:hover {
 }
 
 
+
+
+@media(min-width: 1024px) {
+	.navigation-button {
+		position: absolute;
+		display: none;
+		top: 2px;
+		right: 50%;
+		-webkit-transform: translateX(1200%);
+		    -ms-transform: translateX(1200%);
+		        transform: translateX(1200%);
+	}
+
+	.buttons {
+		width: 100%;
+		height: 0;
+	}
+
+	.buttons-wrapper {
+		position: relative;
+		width: 100%;
+	}
+	
+	.search-button {
+		position: absolute;
+		top: 4px;
+		right: 50%;
+		-webkit-transform: translateX(1200%);
+		    -ms-transform: translateX(1200%);
+		        transform: translateX(1200%);
+	}
+}
 
 
 
